<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VCAM</string>
    <string name="switch1">Force to show permission lack warning</string>
    <string name="switch2">Disable the module temporarily (On is disable)</string>
    <string name="switch3">Play sounds of videos</string>
    <string name="switch4">Force every app use private directory</string>
    <string name="switch5">Disable toast message</string>
    <string name="permission_lack_warn">Missing permissions</string>
    <string name="permission_description">The permission to access local storage is used to set up configuration files. If refused you need to set up file manually.</string>
    <string name="positive">Sure</string>
    <string name="negative">Refuse</string>
    <string name="stream_template">rtsp://192.168.0.1:8554/live</string>
    <string name="your_stream_url">Your stream url</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="invalid_url">Invalid url</string>
</resources>