<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/your_stream_url"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stream_template"
            android:minHeight="48dp"
            android:inputType="textUri"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/connect" />
<!--
        <com.alexvas.rtsp.widget.RtspSurfaceView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:minWidth="64dp"
            android:id="@+id/svVideo" />
-->



        <SurfaceView
            android:id="@+id/svVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/switch1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch5" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>
